Add picture aside

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 </head>
 
 <body>
-  <div>
+  <div class="w-screen h-screen">
 
     <!-- Picture Aside -->
-    <div>
-      <div>
-        <span>Zemakech</span>
+    <div id="pic-bg" class="flex">
+      <div id="logo-bg" class="flex w-full">
+        <img id="logo-img"
+          src="https://res.cloudinary.com/theavocadocoder/image/upload/v1647702344/zemakech-images/logo-all-white_hyhjlj.png"
+          alt="Zemakech logo">
+        <span>Zemakech Cuisine</span>
       </div>
     </div>
 
