Add control div

--- a/index.html
+++ b/index.html
@@ -93,9 +93,8 @@
         </form>
       </div>
       <!-- Control -->
-      <div>
-        <button>Create Account</button>
-        <br>
+      <div id="control-div">
+        <button id="button">Create Account</button>
         <span>Already have an account? <a href="#" target="_blank">Log in</a></span>
       </div>
     </div>
