Edit dummy content

--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
       <!-- Writeup -->
       <div id="writeup-div">
         <p>
-          This is a real online service. This is a real online service. This is a real online service. This is a real
-          online service.
+          This is a real online service. Zemakech Cuisine offers a wide variety of culinary services. In need of catering or home
+          delivery? We got you!
           <br>
-          This is a real online service.
+          You're only a few keystrokes away from experiencing culinary perfection.
         </p>
         <br>
         <p>
-          Fill the form below.
+          Sign up and let us satisfy your cravings.
         </p>
       </div>
       <!-- Form -->
       <div id="form-bg">
-        It's a Form!
+        <p>Let's do this!</p>
+
         <form action="" method="" class="flex flex-col m-20">
 
           <div class="flex">
