Add IDs to form input elements

--- a/index.html
+++ b/index.html
@@ -43,41 +43,44 @@
         
           <p>Let's do this!</p>
           <div>
-            <label for="firstname">FIRST NAME</label>
-            <br>
-            <input type="text" title="Enter you first name">
-          </div>
+              <label for="first-name">FIRST NAME</label>
+              <br>
+              <input id="first-name" type="text" title="Enter you first name">
+            </div>
 
-          <div>
-            <label for="lastname">LAST NAME</label>
-            <br>
-            <input type="text" title="Enter your last name">
-          </div>
+            <div>
+              <label for="last-name">LAST NAME</label>
+              <br>
+              <input id="last-name" type="text" title="Enter your last name">
+            </div>
 
-          <div>
-            <label for="email">EMAIL</label>
-            <br>
-            <input type="email" title="Enter a valid email address" pattern="[a-z0-9]+@[a-z]+.[a-z]+">
-          </div>
+            <div>
+              <label for="email">EMAIL</label>
+              <br>
+              <input id="email" type="email" title="Enter a valid email address" pattern="[a-z0-9]+@[a-z]+.[a-z]+">
+            </div>
 
-          <div>
-            <label for="phonenumber">PHONE NUMBER</label>
-            <br>
-            <input type="number" title="Enter a valid phone number of 11 numeric characters" pattern="[0-9]{11,11}" max="11">
-          </div>
+            <div>
+              <label for="phone-number">PHONE NUMBER</label>
+              <br>
+              <input id="phone-number" type="number" title="Enter a valid phone number of 11 numeric characters" pattern="[0-9]{11,11}" max="11">
+            </div>
 
-          <div>
-            <label for="password">PASSWORD</label>
-            <br>
-            <input type="password" class="password-input" pattern="[a-zA-Z0-9]{5,}"
-              title="Enter a password containing at least 5 alphanumeric characters" autocomplete="current-password" required>
-          </div>
+            <div>
+              <label for="password">PASSWORD</label>
+              <br>
+              <input id="password" type="password" class="error" pattern="[a-zA-Z0-9]{5,}"
+                title="Enter a password containing at least 5 alphanumeric characters" autocomplete="current-password" required>
+            </div>
 
-          <div>
-            <label for="confirmpassword">CONFIRM PASSWORD</label>
-            <br>
-            <input type="password" class="password-input" pattern="[a-zA-Z0-9]{5,}" title="Re-enter the same password">
+            <div>
+              <label for="confirm-password">CONFIRM PASSWORD</label>
+              <br>
+              <input id="confirm-password" type="password" class="error" pattern="[a-zA-Z0-9]{5,}" title="Re-enter the same password">
+            </div>
+
           </div>
+        </div>
 
           <button id="button">Create Account</button>
 
