--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
 
         <button id="button">Create Account</button>
       </form>
-      <!-- Control -->
-      <div id="control-div">
-        <span>Already have an account? <a href="#" target="_blank">Log in</a></span>
-      </div>
+
+      <!-- Log in -->
+      <p id="log-in-text">Already have an account? <a href="">Log in</a></p>
     </div>
   </div>
 </body>
