Wrap form elements in div

--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
         <form action="" method="" class="flex">
         
           <p>Let's do this!</p>
-          <div>
+
+          <div id="form-elements-div" class="flex flex-wrap">
+
+            <div>
               <label for="first-name">FIRST NAME</label>
               <br>
               <input id="first-name" type="text" title="Enter you first name">
