FIX: form display

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
 <body>
   <div class="w-screen h-screen">
-
     <!-- Picture Aside -->
     <div id="pic-bg" class="flex">
       <div id="logo-bg" class="flex w-full">
@@ -37,10 +36,10 @@
           Sign up and let us satisfy your cravings.
         </p>
       </div>
-      
+
       <!-- Form -->
-        <form action="" method="" class="flex">
-        
+      <form action="" method="" class="flex flex-col w-full">
+        <div id="main-form-div" class="flex flex-col w-full">
           <p>Let's do this!</p>
 
           <div id="form-elements-div" class="flex flex-wrap">
