FIX: error class should be triggered by script

--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
             <div>
               <label for="password">PASSWORD</label>
               <br>
-              <input id="password" type="password" class="error" pattern="[a-zA-Z0-9]{5,}"
+              <input id="password" type="password" class="" pattern="[a-zA-Z0-9]{5,}"
                 title="Enter a password containing at least 5 alphanumeric characters" autocomplete="current-password" required>
             </div>
 
             <div>
               <label for="confirm-password">CONFIRM PASSWORD</label>
               <br>
-              <input id="confirm-password" type="password" class="error" pattern="[a-zA-Z0-9]{5,}" title="Re-enter the same password">
+              <input id="confirm-password" type="password" class="" pattern="[a-zA-Z0-9]{5,}" title="Re-enter the same password">
             </div>
 
           </div>
