Include span for displaying error message

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
               <br>
               <input id="password" type="password" class="" pattern="[a-zA-Z0-9]{5,}"
                 title="Enter a password containing at least 5 alphanumeric characters" autocomplete="current-password" required>
+              <span id="password-error-message"></span>
             </div>
 
             <div>
