--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
       <p id="log-in-text">Already have an account? <a href="">Log in</a></p>
     </div>
   </div>
+
+  <script src="./scripts/index.js"></script>
 </body>
 
 </html>
