--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <button id="button">Create Account</button>
+        <button id="button" type="button">Create Account</button>
       </form>
 
       <!-- Log in -->
